--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "lucide-react": "^0.475.0",
-    "next": "^15.3.6",
+    "next": "15.5.9",
     "next-themes": "^0.4.0",
     "patch-package": "^8.0.0",
     "react": "^19.2.1",
